@@ -2,6 +2,11 @@ package hu.cubix.hr.balage.controller;
 
 import hu.cubix.hr.balage.dto.CompanyDto;
 import hu.cubix.hr.balage.dto.EmployeeDto;
+import hu.cubix.hr.balage.mapper.CompanyMapper;
+import hu.cubix.hr.balage.mapper.EmployeeMapper;
+import hu.cubix.hr.balage.model.Company;
+import hu.cubix.hr.balage.service.CompanyService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.lang.Nullable;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -14,34 +19,24 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/companies")
 public class CompaniesRestController {
 
-    private Map<Long, CompanyDto> companyDtos = new TreeMap<>();
+    private final CompanyService companyService;
+    private final CompanyMapper companyMapper;
+    private final EmployeeMapper employeeMapper;
 
-    {
-        companyDtos.put(1L, new CompanyDto(
-                        1L,
-                        1234,
-                        "Teszt1 munkahely",
-                        "1111 Bp Teszt utca",
-                        new ArrayList<>(Arrays.asList(
-                                new EmployeeDto(1L, "Teszt Elek1", "Teszt1 munka", 175000, LocalDateTime.now().minusMonths(5)),
-                                new EmployeeDto(2L, "Teszt Elek2", "Teszt2 munka", 150000, LocalDateTime.now().minusMonths(24))
-                        ))
-                )
-        );
+    @Autowired
+    public CompaniesRestController(CompanyService companyService, CompanyMapper companyMapper, EmployeeMapper employeeMapper) {
+        this.companyService = companyService;
+        this.companyMapper = companyMapper;
+        this.employeeMapper = employeeMapper;
     }
 
 //    @GetMapping
@@ -52,23 +47,27 @@ public class CompaniesRestController {
     @GetMapping
     public List<CompanyDto> findAll(@Nullable @RequestParam(name = "full") Boolean full) {
         List<CompanyDto> ret = new ArrayList<>();
-        Collection<CompanyDto> values = companyDtos.values();
+        Collection<CompanyDto> values = companyMapper.companiesToDtos(companyService.findAll());
 
         if (Boolean.TRUE.equals(full)) {
             ret.addAll(new ArrayList<>(values));
         } else {
             ret.addAll(
                     values.stream()
-                            .map(companyDto -> new CompanyDto(
-                                    companyDto.getId(),
-                                    companyDto.getRegistrationNumber(),
-                                    companyDto.getName(),
-                                    companyDto.getAddress(),
-                                    Collections.emptyList()))
-                            .collect(Collectors.toList())
+                            .map(CompaniesRestController::copyCompanyDto)
+                            .toList()
             );
         }
         return ret;
+    }
+
+    private static CompanyDto copyCompanyDto(CompanyDto companyDto) {
+        return new CompanyDto(
+                companyDto.id(),
+                companyDto.registrationNumber(),
+                companyDto.name(),
+                companyDto.address(),
+                Collections.emptyList());
     }
 
 //    @GetMapping("/{id}")
@@ -84,87 +83,66 @@ public class CompaniesRestController {
 
     @GetMapping("/{id}")
     public ResponseEntity<CompanyDto> findById(@Nullable @RequestParam(name = "full") Boolean full, @PathVariable long id) {
-        var ret = new CompanyDto();
-        var companyDto = companyDtos.get(id);
+        CompanyDto companyDto;
+        Company company = companyService.findById(id);
 
-        if (companyDto == null) {
+        if (company == null) {
             return ResponseEntity.notFound().build();
         }
 
-        if (Boolean.TRUE.equals(full)) {
-            ret = companyDto;
-        } else {
-            ret = new CompanyDto(
-                    companyDto.getId(),
-                    companyDto.getRegistrationNumber(),
-                    companyDto.getName(),
-                    companyDto.getAddress(),
-                    Collections.emptyList()
-            );
+        companyDto = companyMapper.companyToDto(company);
+        if (!Boolean.TRUE.equals(full)) {
+            companyDto = copyCompanyDto(companyDto);
         }
 
-        return ResponseEntity.ok(ret);
+        return ResponseEntity.ok(companyDto);
     }
 
     @PostMapping
-    public ResponseEntity<CompanyDto> create(@RequestBody CompanyDto company) {
-        if (companyDtos.containsKey(company.getId())) {
+    public ResponseEntity<CompanyDto> create(@RequestBody CompanyDto companyDto) {
+        Company company = companyService.create(companyMapper.dtoToCompany(companyDto));
+        if (company == null) {
             return ResponseEntity.badRequest().build();
         }
 
-        companyDtos.put(company.getId(), company);
-        return ResponseEntity.ok(company);
+        return ResponseEntity.ok(companyMapper.companyToDto(company));
     }
 
     @PutMapping("/{id}/updateCompany")
-    public ResponseEntity<CompanyDto> updateCompany(@PathVariable long id, @RequestBody CompanyDto company) {
-        if (!companyDtos.containsKey(id)) {
+    public ResponseEntity<CompanyDto> updateCompany(@PathVariable long id, @RequestBody CompanyDto companyDto) {
+        if (companyService.findById(id) == null) {
             return ResponseEntity.notFound().build();
         }
-
-        companyDtos.put(id, company);
-        return ResponseEntity.ok(company);
+        Company company = companyService.update(companyMapper.dtoToCompany(companyDto));
+        return ResponseEntity.ok(companyMapper.companyToDto(company));
     }
 
     @PutMapping("/{id}/addEmployee")
     public ResponseEntity<CompanyDto> addEmployee(@PathVariable long id, @RequestBody EmployeeDto employeeDto) {
-        if (!companyDtos.containsKey(id)) {
+        Company company = companyService.addEmployee(id, employeeMapper.dtoToEmployee(employeeDto));
+        if (company == null) {
             return ResponseEntity.notFound().build();
         }
-
-        CompanyDto companyDto = companyDtos.get(id);
-        companyDto.getEmployees().add(employeeDto);
-        return ResponseEntity.ok(companyDto);
+        return ResponseEntity.ok(companyMapper.companyToDto(company));
     }
 
     @PutMapping("/{id}/refreshEmployees")
     public ResponseEntity<CompanyDto> refreshEmployees(@PathVariable long id, @RequestBody List<EmployeeDto> employeeDtos) {
-        if (!companyDtos.containsKey(id)) {
+        Company company = companyService.refreshEmployees(id, employeeMapper.dtosToEmployees(employeeDtos));
+        if (company == null) {
             return ResponseEntity.notFound().build();
         }
 
-        CompanyDto companyDto = companyDtos.get(id);
-        List<EmployeeDto> employees = companyDto.getEmployees();
-        employees.clear();
-        employees.addAll(employeeDtos);
-        return ResponseEntity.ok(companyDto);
+        return ResponseEntity.ok(companyMapper.companyToDto(company));
     }
 
     @DeleteMapping("/{id}")
     public void delete(@PathVariable long id) {
-        companyDtos.remove(id);
+        companyService.delete(id);
     }
 
     @DeleteMapping("/{companyId}/{employeeId}")
     public void delete(@PathVariable long companyId, @PathVariable long employeeId) {
-        if (companyDtos.containsKey(companyId)) {
-            CompanyDto companyDto = companyDtos.get(companyId);
-            List<EmployeeDto> employees = companyDto.getEmployees();
-
-            employees.stream()
-                    .filter(employeeDto -> employeeDto.getId() == employeeId)
-                    .findFirst()
-                    .ifPresent(employees::remove);
-        }
+        companyService.delete(companyId, employeeId);
     }
 }
